gcc/testsuite/rust/rustc/ui/issues/issue-30007.rs
macro_rules! t {
    () => ( String ; );     // { dg-error "" "" { target *-*-* } }
}

fn main() {
    let i: Vec<t!()>;
}

